--- a/dataprep-webapp/src/app/components/filter/item/value/_filter-value.scss
+++ b/dataprep-webapp/src/app/components/filter/item/value/_filter-value.scss
@@ -13,7 +13,7 @@
 
 .filter-value {
 	@include ellipsis(180px, inline);
-	padding: 0 5px;
+	margin: 0 5px;
 	background-color: rgba(255, 255, 255, 0.15);
 	border-radius: 2px;
 
@@ -24,8 +24,8 @@
 	}
 
 	&-btn-remove {
-		margin-left: 5px;
 		color: $white;
+		margin-right: 5px;
 
 		&:hover, &:focus {
 			color: darken($white, 10%);
